--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookmark App</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://www.google.com/s2/favicons?domain=google.com"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
@@ -14,6 +18,36 @@
   <body>
     <!-- Open Modal -->
     <h1 id="show-modal">Add Bookmark</h1>
+    <!-- Bookmarks -->
+    <div class="container" id="bookmarks-container">
+      <div class="item">
+        <div class="name">
+          <img
+            src="https://www.google.com/s2/favicons?domain=google.com"
+            alt="Favicon"
+          />
+          <a href="https://google.com" target="_blank">Google</a>
+        </div>
+      </div>
+      <div class="item">
+        <div class="name">
+          <img
+            src="https://www.google.com/s2/favicons?domain=google.com"
+            alt="Favicon"
+          />
+          <a href="https://google.com" target="_blank">Google</a>
+        </div>
+      </div>
+      <div class="item">
+        <div class="name">
+          <img
+            src="https://www.google.com/s2/favicons?domain=google.com"
+            alt="Favicon"
+          />
+          <a href="https://google.com" target="_blank">Google</a>
+        </div>
+      </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
