--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <!-- Bookmarks -->
     <div class="container" id="bookmarks-container">
       <div class="item">
+        <i
+          class="fas fa-times"
+          id="delete-bookmark"
+          title="Delete Bookmark"
+        ></i>
         <div class="name">
           <img
             src="https://www.google.com/s2/favicons?domain=google.com"
@@ -30,6 +35,11 @@
         </div>
       </div>
       <div class="item">
+        <i
+          class="fas fa-times"
+          id="delete-bookmark"
+          title="Delete Bookmark"
+        ></i>
         <div class="name">
           <img
             src="https://www.google.com/s2/favicons?domain=google.com"
@@ -39,6 +49,11 @@
         </div>
       </div>
       <div class="item">
+        <i
+          class="fas fa-times"
+          id="delete-bookmark"
+          title="Delete Bookmark"
+        ></i>
         <div class="name">
           <img
             src="https://www.google.com/s2/favicons?domain=google.com"
