--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </div>
     <!-- Modal -->
-    <div class="modal-container show-modal" id="modal">
+    <div class="modal-container" id="modal">
       <div class="modal">
         <i class="fas fa-times close-icon" id="close-modal"></i>
         <div class="modal-header">
@@ -75,7 +75,7 @@
             <!-- Website Name -->
             <div class="form-group">
               <label for="website-name" class="form-label">Website Name</label>
-              <input type="text" class="form-input" #website-name />
+              <input type="text" class="form-input" id="website-name" />
             </div>
             <!-- Website Url -->
             <div class="form-group">
